@@ -19,6 +19,10 @@ import de.muenchen.isi.domain.model.abfrageAngelegt.AbfrageAngelegtModel;
 import de.muenchen.isi.domain.model.abfrageAngelegt.BaugenehmigungsverfahrenAngelegtModel;
 import de.muenchen.isi.domain.model.abfrageAngelegt.BauleitplanverfahrenAngelegtModel;
 import de.muenchen.isi.domain.model.abfrageAngelegt.WeiteresVerfahrenAngelegtModel;
+import de.muenchen.isi.domain.model.abfrageBedarfsmeldungErfolgt.AbfrageBedarfsmeldungErfolgtModel;
+import de.muenchen.isi.domain.model.abfrageBedarfsmeldungErfolgt.BaugenehmigungsverfahrenBedarfsmeldungErfolgtModel;
+import de.muenchen.isi.domain.model.abfrageBedarfsmeldungErfolgt.BauleitplanverfahrenBedarfsmeldungErfolgtModel;
+import de.muenchen.isi.domain.model.abfrageBedarfsmeldungErfolgt.WeiteresVerfahrenBedarfsmeldungErfolgtModel;
 import de.muenchen.isi.domain.model.abfrageInBearbeitungFachreferat.AbfrageInBearbeitungFachreferatModel;
 import de.muenchen.isi.domain.model.abfrageInBearbeitungFachreferat.BaugenehmigungsverfahrenInBearbeitungFachreferatModel;
 import de.muenchen.isi.domain.model.abfrageInBearbeitungFachreferat.BauleitplanverfahrenInBearbeitungFachreferatModel;
@@ -30,6 +34,7 @@ import de.muenchen.isi.domain.model.abfrageInBearbeitungSachbearbeitung.Weiteres
 import de.muenchen.isi.domain.model.calculation.LangfristigerPlanungsursaechlicherBedarfModel;
 import de.muenchen.isi.domain.service.calculation.CalculationService;
 import de.muenchen.isi.domain.service.filehandling.DokumentService;
+import de.muenchen.isi.infrastructure.entity.Abfrage;
 import de.muenchen.isi.infrastructure.entity.Bauvorhaben;
 import de.muenchen.isi.infrastructure.entity.enums.lookup.ArtAbfrage;
 import de.muenchen.isi.infrastructure.entity.enums.lookup.StatusAbfrage;
@@ -41,7 +46,6 @@ import de.muenchen.isi.infrastructure.repository.BauvorhabenRepository;
 import de.muenchen.isi.security.AuthenticationUtils;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -78,15 +82,17 @@ public class AbfrageService {
      *
      * @param id zum Identifizieren des {@link AbfrageModel}.
      * @return {@link AbfrageModel}.
-     * @throws EntityNotFoundException falls die Abfrage identifiziert durch die {@link AbfrageModel#getId()} nicht gefunden wird.
+     * @throws EntityNotFoundException     falls die Abfrage identifiziert durch die {@link AbfrageModel#getId()} nicht gefunden wird.
+     * @throws UserRoleNotAllowedException falls der User keine Berechtigung für die Abfrage hat.
      */
-    public AbfrageModel getById(final UUID id) throws EntityNotFoundException {
+    public AbfrageModel getById(final UUID id) throws EntityNotFoundException, UserRoleNotAllowedException {
         final var optAbfrage = this.abfrageRepository.findById(id);
         final var abfrage = optAbfrage.orElseThrow(() -> {
             final var message = "Abfrage nicht gefunden.";
             log.error(message);
             return new EntityNotFoundException(message);
         });
+        throwUserRoleNotAllowedExceptionWhenRoleIsAnwenderAndAbfragestatusIsNotErledigt(abfrage);
         return this.abfrageDomainMapper.entity2Model(abfrage);
     }
 
@@ -134,17 +140,18 @@ public class AbfrageService {
      * Diese Methode aktualisiert ein {@link AbfrageAngelegtModel}.
      *
      * @param abfrage zum Speichern
-     * @param id der Abfrage
+     * @param id      der Abfrage
      * @return das gespeicherte {@link AbfrageModel}
-     * @throws UniqueViolationException   falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
-     * @throws OptimisticLockingException falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
-     * @throws EntityNotFoundException falls die Abfrage oder das referenzierte Bauvorhaben nicht existiert.
-     * @throws AbfrageStatusNotAllowedException falls die zu aktualisierende Abfrage sich nicht im Status {@link StatusAbfrage#ANGELEGT} befindet.
+     * @throws UniqueViolationException          falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
+     * @throws OptimisticLockingException        falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
+     * @throws EntityNotFoundException           falls die Abfrage oder das referenzierte Bauvorhaben nicht existiert.
+     * @throws AbfrageStatusNotAllowedException  falls die zu aktualisierende Abfrage sich nicht im Status {@link StatusAbfrage#ANGELEGT} befindet.
      * @throws FileHandlingFailedException       falls es beim Dateihandling zu einem Fehler gekommen ist.
      * @throws FileHandlingWithS3FailedException falls es beim Dateihandling im S3-Storage zu einem Fehler gekommen ist.
+     * @throws UserRoleNotAllowedException       falls der User keine Berechtigung für die Abfrage hat.
      */
     public AbfrageModel patchAngelegt(final AbfrageAngelegtModel abfrage, final UUID id)
-        throws EntityNotFoundException, UniqueViolationException, OptimisticLockingException, AbfrageStatusNotAllowedException, FileHandlingFailedException, FileHandlingWithS3FailedException, CalculationException {
+        throws EntityNotFoundException, UniqueViolationException, OptimisticLockingException, AbfrageStatusNotAllowedException, FileHandlingFailedException, FileHandlingWithS3FailedException, UserRoleNotAllowedException, CalculationException {
         final var originalAbfrageDb = this.getById(id);
         this.throwAbfrageStatusNotAllowedExceptionWhenStatusAbfrageIsInvalid(originalAbfrageDb, StatusAbfrage.ANGELEGT);
 
@@ -178,7 +185,7 @@ public class AbfrageService {
     /**
      * Diese Methode aktualisiert ein {@link BauleitplanverfahrenAngelegtModel}.
      *
-     * @param abfrage mit den Attributen zum Speichern
+     * @param abfrage           mit den Attributen zum Speichern
      * @param originalAbfrageDb welche mit den im Parameter gegebenen abfrage gegebenen Werten aktualisiert und gespeichert wird.
      * @return das gespeicherte {@link AbfrageModel}
      * @throws FileHandlingFailedException       falls es beim Dateihandling zu einem Fehler gekommen ist.
@@ -198,7 +205,7 @@ public class AbfrageService {
     /**
      * Diese Methode aktualisiert ein {@link BaugenehmigungsverfahrenAngelegtModel}.
      *
-     * @param abfrage mit den Attributen zum Speichern
+     * @param abfrage           mit den Attributen zum Speichern
      * @param originalAbfrageDb welche mit den im Parameter gegebenen abfrage gegebenen Werten aktualisiert und gespeichert wird.
      * @return das gespeicherte {@link AbfrageModel}
      * @throws FileHandlingFailedException       falls es beim Dateihandling zu einem Fehler gekommen ist.
@@ -218,7 +225,7 @@ public class AbfrageService {
     /**
      * Diese Methode aktualisiert ein {@link WeiteresVerfahrenAngelegtModel}.
      *
-     * @param abfrage mit den Attributen zum Speichern
+     * @param abfrage           mit den Attributen zum Speichern
      * @param originalAbfrageDb welche mit den im Parameter gegebenen abfrage gegebenen Werten aktualisiert und gespeichert wird.
      * @return das gespeicherte {@link AbfrageModel}
      * @throws FileHandlingFailedException       falls es beim Dateihandling zu einem Fehler gekommen ist.
@@ -239,18 +246,19 @@ public class AbfrageService {
      * Diese Methode aktualisiert ein {@link AbfrageInBearbeitungSachbearbeitungModel}.
      *
      * @param abfrage zum Speichern
-     * @param id der Abfrage
+     * @param id      der Abfrage
      * @return das gespeicherte {@link AbfrageModel}
-     * @throws UniqueViolationException   falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
-     * @throws OptimisticLockingException falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
-     * @throws EntityNotFoundException falls das referenzierte Bauvorhaben nicht existiert.
+     * @throws UniqueViolationException         falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
+     * @throws OptimisticLockingException       falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
+     * @throws EntityNotFoundException          falls das referenzierte Bauvorhaben nicht existiert.
      * @throws AbfrageStatusNotAllowedException falls die zu aktualisierende Abfrage sich nicht im Status {@link StatusAbfrage#IN_BEARBEITUNG_SACHBEARBEITUNG} befindet.
+     * @throws UserRoleNotAllowedException      falls der User keine Berechtigung für die Abfrage hat.
      */
     public AbfrageModel patchInBearbeitungSachbearbeitung(
         final AbfrageInBearbeitungSachbearbeitungModel abfrage,
         final UUID id
     )
-        throws EntityNotFoundException, AbfrageStatusNotAllowedException, UniqueViolationException, OptimisticLockingException, CalculationException {
+        throws EntityNotFoundException, AbfrageStatusNotAllowedException, UniqueViolationException, OptimisticLockingException, UserRoleNotAllowedException, CalculationException {
         final var originalAbfrageDb = this.getById(id);
         this.throwAbfrageStatusNotAllowedExceptionWhenStatusAbfrageIsInvalid(
                 originalAbfrageDb,
@@ -288,18 +296,19 @@ public class AbfrageService {
      * Diese Methode aktualisiert ein {@link AbfrageInBearbeitungFachreferatModel}.
      *
      * @param abfrage zum Speichern
-     * @param id der Abfrage
+     * @param id      der Abfrage
      * @return das gespeicherte {@link AbfrageModel}
-     * @throws UniqueViolationException   falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
-     * @throws OptimisticLockingException falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
-     * @throws EntityNotFoundException falls das referenzierte Bauvorhaben nicht existiert.
+     * @throws UniqueViolationException         falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
+     * @throws OptimisticLockingException       falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
+     * @throws EntityNotFoundException          falls das referenzierte Bauvorhaben nicht existiert.
      * @throws AbfrageStatusNotAllowedException falls die zu aktualisierende Abfrage sich nicht im Status {@link StatusAbfrage#IN_BEARBEITUNG_FACHREFERATE} befindet.
+     * @throws UserRoleNotAllowedException      falls der User keine Berechtigung für die Abfrage hat.
      */
     public AbfrageModel patchInBearbeitungFachreferat(
         final AbfrageInBearbeitungFachreferatModel abfrage,
         final UUID id
     )
-        throws EntityNotFoundException, AbfrageStatusNotAllowedException, UniqueViolationException, OptimisticLockingException, CalculationException {
+        throws EntityNotFoundException, AbfrageStatusNotAllowedException, UniqueViolationException, OptimisticLockingException, UserRoleNotAllowedException, CalculationException {
         final var originalAbfrageDb = this.getById(id);
         this.throwAbfrageStatusNotAllowedExceptionWhenStatusAbfrageIsInvalid(
                 originalAbfrageDb,
@@ -334,13 +343,59 @@ public class AbfrageService {
     }
 
     /**
+     * Diese Methode aktualisiert ein {@link AbfrageBedarfsmeldungErfolgtModel}.
+     *
+     * @param abfrage zum Speichern
+     * @param id der Abfrage
+     * @return das gespeicherte {@link AbfrageModel}
+     * @throws UniqueViolationException   falls der Name der Abfrage oder der Abfragevariante bereits vorhanden ist.
+     * @throws OptimisticLockingException falls in der Anwendung bereits eine neuere Version der Entität gespeichert ist.
+     * @throws EntityNotFoundException falls das referenzierte Bauvorhaben nicht existiert.
+     * @throws AbfrageStatusNotAllowedException falls die zu aktualisierende Abfrage sich nicht im Status {@link StatusAbfrage#IN_BEARBEITUNG_FACHREFERATE} befindet.
+     */
+    public AbfrageModel patchBedarfsmeldungErfolgt(final AbfrageBedarfsmeldungErfolgtModel abfrage, final UUID id)
+        throws EntityNotFoundException, AbfrageStatusNotAllowedException, UniqueViolationException, OptimisticLockingException, UserRoleNotAllowedException, CalculationException {
+        final var originalAbfrageDb = this.getById(id);
+        this.throwAbfrageStatusNotAllowedExceptionWhenStatusAbfrageIsInvalid(
+                originalAbfrageDb,
+                StatusAbfrage.BEDARFSMELDUNG_ERFOLGT
+            );
+
+        final AbfrageModel abfrageToSave;
+        if (ArtAbfrage.BAULEITPLANVERFAHREN.equals(abfrage.getArtAbfrage())) {
+            abfrageToSave =
+                this.abfrageDomainMapper.request2Model(
+                        (BauleitplanverfahrenBedarfsmeldungErfolgtModel) abfrage,
+                        (BauleitplanverfahrenModel) originalAbfrageDb
+                    );
+        } else if (ArtAbfrage.BAUGENEHMIGUNGSVERFAHREN.equals(abfrage.getArtAbfrage())) {
+            abfrageToSave =
+                this.abfrageDomainMapper.request2Model(
+                        (BaugenehmigungsverfahrenBedarfsmeldungErfolgtModel) abfrage,
+                        (BaugenehmigungsverfahrenModel) originalAbfrageDb
+                    );
+        } else if (ArtAbfrage.WEITERES_VERFAHREN.equals(abfrage.getArtAbfrage())) {
+            abfrageToSave =
+                this.abfrageDomainMapper.request2Model(
+                        (WeiteresVerfahrenBedarfsmeldungErfolgtModel) abfrage,
+                        (WeiteresVerfahrenModel) originalAbfrageDb
+                    );
+        } else {
+            final var message = "Die Art der Abfrage wird nicht unterstützt.";
+            log.error(message);
+            throw new EntityNotFoundException(message);
+        }
+        return this.save(abfrageToSave);
+    }
+
+    /**
      * Diese Methode löscht ein {@link AbfrageModel}.
      *
      * @param id zum Identifizieren des {@link AbfrageModel}.
      * @throws EntityNotFoundException          falls die Abfrage identifiziert durch die {@link AbfrageModel#getId()} nicht gefunden wird.
      * @throws EntityIsReferencedException      falls ein {@link BauvorhabenModel} in der Abfrage referenziert wird.
-     * @throws UserRoleNotAllowedException      falls der Nutzer nicht die richtige Rolle hat.
-     * @throws AbfrageStatusNotAllowedException falls die Abfrage den falschen Status hat..
+     * @throws UserRoleNotAllowedException      falls der User keine Berechtigung für die Abfrage hat.
+     * @throws AbfrageStatusNotAllowedException falls die Abfrage den falschen Status hat.
      */
     public void deleteById(final UUID id)
         throws EntityNotFoundException, EntityIsReferencedException, UserRoleNotAllowedException, AbfrageStatusNotAllowedException {
@@ -355,7 +410,7 @@ public class AbfrageService {
      * Dabei wird auch geprüft, ob der die zur Abfrage zugeordneten sub-ID (Subject-ID der Security-Session) mit der sub-ID des Nutzers übereinstimmt.
      *
      * @param abfrage zum Identifizieren des Status.
-     * @throws UserRoleNotAllowedException      falls der Nutzer nicht die richtige Rolle hat.
+     * @throws UserRoleNotAllowedException      falls der User keine Berechtigung für die Abfrage hat.
      * @throws AbfrageStatusNotAllowedException falls die Abfrage den falschen Status hat oder der Sub des Nutzers nicht mit dem Sub der Abfrage übereinstimmt.
      */
     protected void throwUserRoleNotAllowedOrAbfrageStatusNotAllowedExceptionWhenNotTheCorrectUserWithTheCorrectRole(
@@ -439,26 +494,33 @@ public class AbfrageService {
      *
      * @param abfragevarianteId zum ermitteln der Abfrage.
      * @return die gefundene Abfrage.
-     * @throws EntityNotFoundException falls keine Abfrage auf Basis der Abfragevariante ID eindeutig ermittelt werden konnte.
+     * @throws EntityNotFoundException     falls keine Abfrage auf Basis der Abfragevariante ID eindeutig ermittelt werden konnte.
+     * @throws UserRoleNotAllowedException falls der User keine Berechtigung für die Abfrage hat.
      */
-    public AbfrageModel getByAbfragevarianteId(final UUID abfragevarianteId) throws EntityNotFoundException {
+    public AbfrageModel getByAbfragevarianteId(final UUID abfragevarianteId)
+        throws EntityNotFoundException, UserRoleNotAllowedException {
         final var id = abfragevarianteId.toString();
 
         final var abfrageIds = Stream
             .of(
-                abfragevarianteBauleitplanverfahrenRepository.findAbfrageIdForAbfragevarianteById(id),
-                abfragevarianteBauleitplanverfahrenRepository.findAbfrageIdForAbfragevarianteSachbearbeitungById(id),
-                abfragevarianteBaugenehmigungsverfahrenRepository.findAbfrageIdForAbfragevarianteById(id),
-                abfragevarianteBaugenehmigungsverfahrenRepository.findAbfrageIdForAbfragevarianteSachbearbeitungById(
-                    id
+                abfragevarianteBauleitplanverfahrenRepository.findAbfrageIdForAbfragevarianteById(abfragevarianteId),
+                abfragevarianteBauleitplanverfahrenRepository.findAbfrageIdForAbfragevarianteSachbearbeitungById(
+                    abfragevarianteId
                 ),
-                abfragevarianteWeiteresVerfahrenRepository.findAbfrageIdForAbfragevarianteById(id),
-                abfragevarianteWeiteresVerfahrenRepository.findAbfrageIdForAbfragevarianteSachbearbeitungById(id)
+                abfragevarianteBaugenehmigungsverfahrenRepository.findAbfrageIdForAbfragevarianteById(
+                    abfragevarianteId
+                ),
+                abfragevarianteBaugenehmigungsverfahrenRepository.findAbfrageIdForAbfragevarianteSachbearbeitungById(
+                    abfragevarianteId
+                ),
+                abfragevarianteWeiteresVerfahrenRepository.findAbfrageIdForAbfragevarianteById(abfragevarianteId),
+                abfragevarianteWeiteresVerfahrenRepository.findAbfrageIdForAbfragevarianteSachbearbeitungById(
+                    abfragevarianteId
+                )
             )
             .filter(Optional::isPresent)
             .map(Optional::get)
-            .map(UUID::fromString)
-            .collect(Collectors.toList());
+            .toList();
 
         if (abfrageIds.size() != 1) {
             final var message = "Abfrage auf Basis einer Abfragevariante ID nicht eindeutig auffindbar.";
@@ -467,5 +529,25 @@ public class AbfrageService {
         }
 
         return this.getById(abfrageIds.get(0));
+    }
+
+    /**
+     * Wirft eine {@link UserRoleNotAllowedException} wenn der User die Rolle Anwender hat
+     * und der Status der Abfrage nicht {@link  StatusAbfrage#ERLEDIGT_OHNE_FACHREFERAT} oder
+     * {@link StatusAbfrage#ERLEDIGT_MIT_FACHREFERAT} ist.
+     *
+     * @param abfrage die bearbeitet werden soll.
+     * @throws UserRoleNotAllowedException falls der User keine Berechtigung für die Abfrage hat.
+     */
+    public void throwUserRoleNotAllowedExceptionWhenRoleIsAnwenderAndAbfragestatusIsNotErledigt(Abfrage abfrage)
+        throws UserRoleNotAllowedException {
+        if (authenticationUtils.isRoleAnwender()) {
+            if (
+                abfrage.getStatusAbfrage() != StatusAbfrage.ERLEDIGT_OHNE_FACHREFERAT &&
+                abfrage.getStatusAbfrage() != StatusAbfrage.ERLEDIGT_MIT_FACHREFERAT
+            ) {
+                throw new UserRoleNotAllowedException("Fehlende Berechtigung für die Abfrage");
+            }
+        }
     }
 }
